# shapes

./: .clang-format  .cmake-format.yaml  .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  appveyor.yml  codecov.yml
docs/: Doxyfile.in
include/simo/: exceptions.hpp  shapes.hpp  shapes_fwd.hpp
include/simo/algorithm/: algorithm_fwd.hpp  measurements.hpp  operations.hpp  predicates.hpp  transformations.hpp
include/simo/algorithm/detail/: orient2d.hpp  point_in_polygon.hpp  segment_intersection.hpp
include/simo/geom/: bounds.hpp  curve.hpp  envelope.hpp  geometry.hpp  linearring.hpp  linestring.hpp  multilinestring.hpp  multipoint.hpp  multipolygon.hpp  point.hpp  point_collection.hpp  polygon.hpp  types.hpp  utils.hpp
include/simo/geom/detail/: bounds.hpp  geometry.hpp  geometry_sequence.hpp  linestring.hpp  multilinestring.hpp  multipoint.hpp  multipolygon.hpp  point.hpp  point_sequence.hpp  polygon.hpp  sequence.hpp  types.hpp  utils.hpp
include/simo/io/: geojson_parser.hpp  polyline.hpp  wkt_lexer.hpp  wkt_lexer.re  wkt_parser.c  wkt_parser.h  wkt_parser.hpp  wkt_parser.y  wkt_reader.hpp  wkt_reader.re  wkt_token.hpp
include/simo/io/detail/: wkt_lexer.re  wkt_parser.hpp.footer  wkt_parser.hpp.header  wkt_parser.y  wkt_token.hpp.footer
single_include/simo/: shapes.hpp
tests/: CMakeLists.txt  test_envelope.cpp  test_geojson_parser.cpp  test_geometry.cpp  test_linearring.cpp  test_linestring.cpp  test_measurements.cpp  test_multilinestring.cpp  test_multipoint.cpp  test_multipolygon.cpp  test_operations.cpp  test_point.cpp  test_polygon.cpp  test_polyline.cpp  test_predicates.cpp  test_transformations.cpp  test_utils.cpp
