option(SHAPES_ENABLE_COVERAGE "whether to enable coverage" OFF)
if(SHAPES_ENABLE_COVERAGE)
    add_compile_options(--coverage -O0)
endif()

file(GLOB files "test_*.cpp")
foreach(file ${files})
    get_filename_component(test_name ${file} NAME_WE)
    message(STATUS "Building target ${test_name}")
    add_executable(${test_name} ${file})
    target_link_libraries(${test_name} ${SHAPES_LIBRARY})
    if(SHAPES_ENABLE_COVERAGE)
        target_link_libraries(${test_name} --coverage)
    endif()
    target_compile_definitions(${test_name} PRIVATE CATCH_CONFIG_MAIN)
    target_include_directories(${test_name} PUBLIC ${SHAPES_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/thirdparty)
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()